# integral

./: CMakeLists.txt  README.md  main.cpp  solver.hpp  unit_test.cpp
